--- a/tutorial_knockback_inspector.html
+++ b/tutorial_knockback_inspector.html
@@ -17,7 +17,7 @@
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.19.0.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.19.1.js"></script>
     <script type="application/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="./vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="./js/stylecode.js"></script>
@@ -160,10 +160,10 @@
                     </ol>
                   </p>
                   <h3>Graph Generation</h3>
-                  <P><span>By default, a</span><a href="doc/classes/kb/ViewModel.html"> kb.ViewModel</a><span>will generate a kb.ViewModel for each of its nested models and a kb.collectionObservable for each of its nested collections when used like:</span>
+                  <P><span>By default, a</span><a href="doc/class/kb/ViewModel.html"> kb.ViewModel</a><span>will generate a kb.ViewModel for each of its nested models and a kb.collectionObservable for each of its nested collections when used like:</span>
                     <pre>kb.viewModel(my_model)</pre>
                   </P>
-                  <P><span>Also, a</span><a href="doc/classes/kb/CollectionObservable.html"> kb.CollectionObservable</a><span>can easily be configured to generate a kb.ViewModel for each of its models when configured like:</span>
+                  <P><span>Also, a</span><a href="doc/class/kb/CollectionObservable.html"> kb.CollectionObservable</a><span>can easily be configured to generate a kb.ViewModel for each of its models when configured like:</span>
                     <pre>kb.collectionObservable(my_collection, {view_model: kb.ViewModel})</pre>
                   </P>
                   <P>What this means is that Knockback takes care of circular references between Backbone.Models or Backbone.Collections so you don't have to. In the case of circular references, you just need to be careful to handle cycles correctly when you traverse the nodes in the graph.</P>
@@ -343,7 +343,7 @@
 
   &lt;!-- DEPENDENCIES --&gt;
   &lt;script src=&#39;vendor/jquery-1.9.1.js&#39;&gt;&lt;/script&gt;
-  &lt;script src=&#39;vendor/knockback-core-stack-0.19.0.js&#39;&gt;&lt;/script&gt;
+  &lt;script src=&#39;vendor/knockback-core-stack-0.19.1.js&#39;&gt;&lt;/script&gt;
   &lt;script src=&#39;vendor/backbone-relational-0.8.8.js&#39;&gt;&lt;/script&gt;
 
   &lt;!-- APPLICATION STYLING --&gt;
@@ -430,7 +430,7 @@ this.kbi.VERSION = '0.1.0';</pre>
 
   &lt;!-- DEPENDENCIES --&gt;
   &lt;script src=&#39;vendor/jquery-1.9.1.js&#39;&gt;&lt;/script&gt;
-  &lt;script src=&#39;vendor/knockback-core-stack-0.19.0.js&#39;&gt;&lt;/script&gt;
+  &lt;script src=&#39;vendor/knockback-core-stack-0.19.1.js&#39;&gt;&lt;/script&gt;
   &lt;script src=&#39;vendor/backbone-relational-0.8.8.js&#39;&gt;&lt;/script&gt;
 
   &lt;!-- KNOCKBACK-INSPECTOR LIBRARY --&gt;
