--- a/tutorial_nested_models.html
+++ b/tutorial_nested_models.html
@@ -17,7 +17,7 @@
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.19.0.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.19.1.js"></script>
     <script type="application/javascript" src="vendor/js/backbone-relational-0.8.8.js"></script>
     <script type="application/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="./vendor/google-code-prettify/prettify.js"></script>
@@ -84,7 +84,7 @@
       <content class="page">
         <section>
           <h1>Tutorial: Nested Models</h1>
-          <div><span>Because Backbone.Models can have attributes than contain nested Backbone.Models or Backbone.Collections, there are times where you need to specialize the ViewModel you want to use; for example, in a model/collection hierachy with relationships. When you do need to, you can use the `factories` option when creating a</span><a href="doc/classes/kb/ViewModel.html">kb.ViewModel</a><span> or</span><a href="doc/classes/kb/CollectionObservable.html">kb.CollectionObservable.</a></div>
+          <div><span>Because Backbone.Models can have attributes than contain nested Backbone.Models or Backbone.Collections, there are times where you need to specialize the ViewModel you want to use; for example, in a model/collection hierachy with relationships. When you do need to, you can use the `factories` option when creating a</span><a href="doc/class/kb/ViewModel.html">kb.ViewModel</a><span> or</span><a href="doc/class/kb/CollectionObservable.html">kb.CollectionObservable.</a></div>
           <h2>Specifying Mappings Paths for kb.CollectionObservables</h2>
           <p>In the following example, we specify bindings so the collection view models (path: 'models') use a PersonViewModel; whereas, the 'friends' relationship (path: 'models.friends.models') uses FriendViewModel.</p>
           <div class="row-fluid">
