--- a/getting_started_knockback_important_details.html
+++ b/getting_started_knockback_important_details.html
@@ -17,7 +17,7 @@
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.19.0.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.19.1.js"></script>
     <script type="application/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="./vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="./js/stylecode.js"></script>
@@ -85,9 +85,9 @@
 <h1 id="inheritance">Inheritance</h1>
 <p>Some Knockback classes are meant to be inherited from. Specifically:</p>
 <ul>
-<li><a href="doc/classes/kb/ViewModel.html">kb.ViewModel</a></li>
-<li><a href="doc/classes/kb/CollectionObservable.html">kb.CollectionObservable</a></li>
-<li><a href="doc/classes/kb/LocalizedObservable.html">kb.LocalizedObservable</a></li>
+<li><a href="doc/class/kb/ViewModel.html">kb.ViewModel</a></li>
+<li><a href="doc/class/kb/CollectionObservable.html">kb.CollectionObservable</a></li>
+<li><a href="doc/class/kb/LocalizedObservable.html">kb.LocalizedObservable</a></li>
 </ul>
 <p>When using CoffeeScript, you can derive from a super class using:</p>
 <pre><code>class YourClass extends SuperClass
@@ -151,7 +151,7 @@ ko.applyBindings(view_model, $(&#39;#kb_view_model_inheritance&#39;)[0]);
               </div>
             </div>
           </div><h1 id="specifying-mappings-paths-for-nested-models">Specifying Mappings Paths for Nested Models</h1>
-<p>Because Backbone.Models can have attributes than contain nested Backbone.Models or Backbone.Collections, there are times where you need to specialize the ViewModel you want to use; for example, in a model/collection hierachy with relationships. When you do need to, you can use the <code>factories</code> option when creating a <a href="doc/classes/kb/ViewModel.html">kb.ViewModel</a> or <a href="doc/classes/kb/CollectionObservable.html">kb.CollectionObservable</a></p>
+<p>Because Backbone.Models can have attributes than contain nested Backbone.Models or Backbone.Collections, there are times where you need to specialize the ViewModel you want to use; for example, in a model/collection hierachy with relationships. When you do need to, you can use the <code>factories</code> option when creating a <a href="doc/class/kb/ViewModel.html">kb.ViewModel</a> or <a href="doc/class/kb/CollectionObservable.html">kb.CollectionObservable</a></p>
 
           <pre data-for="cs">view_model = {
   people: kb.collectionObservable(new Backbone.Collection([bob, fred]), {
@@ -172,12 +172,12 @@ ko.applyBindings(view_model, $(&#39;#kb_view_model_inheritance&#39;)[0]);
 <p>Many Knockback.js classes return Knockout.js observables so their dependencies/subscriptions can and should be managed like any Knockout observable. This is **very important if you choose to extend Knockback classes.</p>
 <p>These classes return a ko.observable instead of &#39;this&#39;:</p>
 <ul>
-<li><a href="doc/classes/kb/CollectionObservable.html">kb.CollectionObservable</a></li>
-<li><a href="doc/classes/kb/Observable.html">kb.Observable</a></li>
-<li><a href="doc/classes/kb/DefaultWrapper.html">kb.DefaultWrapper</a></li>
-<li><a href="doc/classes/kb/FormattedObservable.html">kb.FormattedObservable</a></li>
-<li><a href="doc/classes/kb/LocalizedObservable.html">kb.LocalizedObservable</a></li>
-<li><a href="doc/classes/kb/TriggeredObservable.html">kb.TriggeredObservable</a></li>
+<li><a href="doc/class/kb/CollectionObservable.html">kb.CollectionObservable</a></li>
+<li><a href="doc/class/kb/Observable.html">kb.Observable</a></li>
+<li><a href="doc/class/kb/DefaultWrapper.html">kb.DefaultWrapper</a></li>
+<li><a href="doc/class/kb/FormattedObservable.html">kb.FormattedObservable</a></li>
+<li><a href="doc/class/kb/LocalizedObservable.html">kb.LocalizedObservable</a></li>
+<li><a href="doc/class/kb/TriggeredObservable.html">kb.TriggeredObservable</a></li>
 </ul>
 <p>Use ko.utils.wrappedObservable(this) or return the constructor result if you dervive from them:</p>
 <pre><code>YourCollectionObservable = kb.CollectionObservable.extend({
@@ -194,11 +194,11 @@ ko.applyBindings(view_model, $(&#39;#kb_view_model_inheritance&#39;)[0]);
 });
 </code></pre><p>These classes return &#39;this&#39;:</p>
 <ul>
-<li><a href="doc/classes/kb/Factory.html">kb.Factory</a></li>
-<li><a href="doc/classes/kb/ModelWatcher.html">kb.ModelWatcher</a></li>
-<li><a href="doc/classes/kb/Store.html">kb.Store</a></li>
-<li><a href="doc/classes/kb/ViewModel.html">kb.ViewModel</a></li>
-<li><a href="doc/classes/kb/Statistics.html">kb.Statistics</a></li>
+<li><a href="doc/class/kb/Factory.html">kb.Factory</a></li>
+<li><a href="doc/class/kb/ModelWatcher.html">kb.ModelWatcher</a></li>
+<li><a href="doc/class/kb/Store.html">kb.Store</a></li>
+<li><a href="doc/class/kb/ViewModel.html">kb.ViewModel</a></li>
+<li><a href="doc/class/kb/Statistics.html">kb.Statistics</a></li>
 </ul>
 <h1 id="backbone-model-signatures">Backbone.Model Signatures</h1>
 <p>Knockback.js does not require Backbone.Models or Backbone.ModelRefs for attribute watching, but requires only Backbone.Model-like signature.</p>
