--- a/tutorial_inject.html
+++ b/tutorial_inject.html
@@ -17,7 +17,7 @@
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.19.0.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.19.1.js"></script>
     <script type="application/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="./vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="./js/stylecode.js"></script>
@@ -84,7 +84,7 @@
 <p><a href="index.html">Knockback.js</a> provides an a few helpers to inject ViewModels into your HTML Views in a similar way to <a href="http://angularjs.org/">AngularJS&#39;s</a> <code>ng-app</code> so you can build up an application by dynamically binding observables directly from your HTML.</p>
 <p>The following examples show how you might port AngularJS samples to Knockback to help you compare approaches. There&#39;s nothing complicated here, just a <code>kb-inject</code> attribute and a custom <code>inject</code> Knockout binding to add observables to your ViewModel.</p>
 <p>The main way to bind a View when your page is loaded, is to use a <code>kb-inject</code> attribute on your HTML elements. You can optionally provide some hooks if you like:</p>
-<p>For more examples and information, please see the <a href="doc/classes/kb.html#injectViewModels-class">API Documentation</a>.</p>
+<p>For more examples and information, please see the <a href="doc/class/kb/Inject.html#injectViewModels-static">API Documentation</a>.</p>
 
         <pre>&lt;!-- BIND WITHOUT PARAMETERS - create a new view model and bind the hierachy --&gt;
 &lt;html kb-inject&gt;
@@ -257,7 +257,7 @@ window.loadUrlFn = function(url) { return function() { return Backbone.history.l
             </div>
           </div>
         </div><h2 id="project-example">Project Example</h2>
-<p>Before we start the example, you should review the <a href="doc/classes/kb/Validation.html">validations documentation</a>.
+<p>Before we start the example, you should review the <a href="doc/class/kb/Validation.html">validations documentation</a>.
 Now on with the example! This example shows:</p>
 <ul>
 <li>how you can set up a Backbone.Router to control an embedded page using the &#39;kb-inject&#39; afterBinding callback</li>
